tests/compile_errors/014-main-signature.buzz
// Expected `main` signature to be `fun main([ args: [int] ]) > void|int` got fun main(args: int) > void
fun main(args: int) > void {}
